tests/paczka1/small_fuzzy/55171665.err
Error in line 3: ImZ A238 67,8
Error in line 4: ImZ S625 85,6
